@@ -5,6 +5,7 @@
 	* dmidecode.c: Add support for extended BIOS ROM size (DMI type 0).
 	* dmidecode.c: Add new enumerated values for chassis types
 	  (DMI type 3).
+	* dmidecode.c: Add new enumerated values for processors (DMI type 4).
 
 2017-04-11  Jean Delvare  <jdelvare@suse.de>
 
